# writeo

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  AGENTS.md  LICENSE  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.ts  test_correction.py  test_output.txt  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: deploy-and-test.yml  deploy-modal.yml
amplify/: backend.ts  package.json
amplify/data/: resource.ts
amplify/languagetool/: resource.ts
app/: globals.css  layout.tsx  page.tsx
app/components/: language-tool-demo.tsx  text-checker.tsx
app/lib/: actions.ts  config.ts  languagetool-client.ts  types.ts  use-language-tool.ts
apps/api-worker/: .dev.vars.example  ARCHITECTURE.md  REVIEW.md  package.json  tsconfig.json  wrangler.toml
apps/web/: .env.example  .eslintrc.js  .gitignore  PWA_SETUP.md  README.md  eslint.config.mjs  next.config.ts  open-next.config.ts  package.json  tsconfig.json  wrangler.toml
docs/: ADDING_SERVICES.md  API-ARCHITECTURE.md  ARCHITECTURE.md  ASSESSOR_EVALUATION_REPORT.md  CONSOLIDATION_SUMMARY.md  CORPUS_MODEL_GUIDE.md  COST_REVIEW.md  DEPLOYMENT.md  DOCUMENTATION_REVIEW.md  FEEDBACK_MODEL_GUIDE.md  GEC_SEQ2SEQ_PLAN.md  GEC_SERVICE.md  GROQ_COST_CONTROL.md  LEGAL_COMPLIANCE.md  MODELS.md  MODES.md  OPERATIONS.md  PWA_SETUP.md  README.md  SCRIPTS.md  SERVICES.md  SPEC.md  STATE_MANAGEMENT.md  STATUS.md  STORAGE_MODEL.md  TESTING.md  TESTING_REVIEW_2025.md  TEST_IMPROVEMENTS_REMAINING.md  TEST_PLAN.md  TEST_REVIEW.md  TODO.md  TRAINING_DATASETS.md  api-reference.md  architecture.md  cost-optimization.md  deployment.md  openapi.yaml
docs/architecture/: api-worker.md  overview.md  state-management.md
docs/guides/: adding-services.md  services.md
docs/models/: corpus.md  datasets.md  deberta.md  evaluation.md  feedback.md  gec.md  overview.md
docs/operations/: cost.md  deployment.md  modes.md  monitoring.md  pwa.md  scripts.md  testing.md  training.md
docs/reference/: legal.md  openapi.yaml  status.md
scripts/: README.md  apply-corpus-calibration.py  calibrate-from-corpus.py  check-logs.sh  check-python.sh  check_links.py  clear-cloudflare-data.sh  deploy-all.sh  deploy-modal.sh  evaluate_assessors.py  fetch_config.py  install-hooks.sh  manage-api-keys.sh  measure_latency.py  nuke.sh  remove-secret-from-history.py  reset-rate-limits.sh  set-mode-production.sh  set-mode.sh  setup.sh  start-test-env.sh  test-local.sh
scripts/hooks/: pre-commit  pre-push
scripts/training/: .gitignore  QUICKSTART.md  README.md  TRAINING_CONFIG.md  analyze-data.py  check-model-files.py  config.py  corpus-raw  evaluate-aes-essay.py  evaluate-deberta.py  evaluate-model-modal.py  evaluate-model.py  evaluate-on-modal.py  feedback_dataset.py  feedback_model.py  inspect-data.py  list-volume-files.py  losses.py  model.py  models.py  parse_m2_annotations.py  pooling.py  predict_feedback.py  prepare-corpus.py  prepare-enhanced-corpus.py  prepare-gec-seq2seq.py  test-bio-alignment.py  test-deberta-inference.py  test-model-integration.py  test-model-modal.py  test-model-on-modal.py  test-train-feedback-quick.py  test-train-feedback.py  test-volume.py  train-deberta-aes.py  train-feedback-model.py  train-gec-seq2seq.py  train-overall-score.py  upload-dress.py  validate-assessors.py  (+3 more)
services/modal-corpus/: README.md  app.py  check-vol.py  config.py  model_loader.py  pyproject.toml  schemas.py
services/modal-corpus/api/: __init__.py  routes.py
services/modal-deberta/: .gitignore  app.py  config.py  model.py  model_loader.py  pooling.py  pyproject.toml  schemas.py
services/modal-deberta/api/: __init__.py
services/modal-essay/: MODELS.md  README.md  app.py  config.py  model_loader.py  pyproject.toml  pyrightconfig.json  schemas.py  test_local.py  utils.py
services/modal-essay/api/: __init__.py  handlers_grade.py  handlers_models.py  handlers_submission.py  middleware.py  routes.py
services/modal-essay/scoring/: __init__.py  calibration.py  dimension_mapping.py  inference.py  logits_processing.py  overall_score.py  quality_analysis.py
services/modal-feedback/: README.md  api.py  app.py  feedback_model.py  model_loader.py  pyproject.toml
services/modal-gec/: api.py  correction.py  main.py  pyproject.toml
services/modal-gector/: __init__.py  api.py  main.py  pyproject.toml
services/modal-lt/: README.md  app.py  config.py  ngram_setup.py  pyproject.toml  schemas.py  server.py  tool_loader.py
services/modal-lt/api/: __init__.py  handlers.py  middleware.py
services/modal-lt/checker/: __init__.py  analysis.py  constants.py  conversion.py
services/modal_gec/: api.py  correction.py  main.py
test-results/: .last-run.json
tests/: README.md  api.test.ts  constants.ts  example.spec.ts  helpers.ts  position-validation.test.ts  position-validation.unit.test.ts  setup.ts
tests/api/: core.integration.test.ts  feedback.integration.test.ts  grammar.integration.test.ts  llm.integration.test.ts
tests/api-worker/: helpers.ts  middleware.auth.test.ts  middleware.auth.unit.test.ts  middleware.integration.test.ts  middleware.rate-limit.test.ts  middleware.request-id.test.ts  middleware.security.test.ts  middleware.security.unit.test.ts  services.llm-mock.unit.test.ts  utils.context.test.ts  utils.context.unit.test.ts  utils.errors.test.ts  utils.errors.unit.test.ts  utils.fetch-with-timeout.test.ts  utils.http.test.ts  utils.http.unit.test.ts  utils.validation.unit.test.ts  utils.zod.test.ts  utils.zod.unit.test.ts
tests/e2e/: core.spec.ts  draft-persistence.spec.ts  draft-tracking.spec.ts  error-handling.spec.ts  fixtures.ts  helpers.ts  homepage.spec.ts  interactive-learning.spec.ts  responsive.spec.ts  results.spec.ts  smoke.spec.ts  visual.spec.ts  writing.spec.ts
tests/helpers/: error-scenarios.ts  mock-validation.ts
tests/shared/: retry.test.ts  text-utils.test.ts  types.test.ts  types.unit.test.ts  validation.test.ts  validation.unit.test.ts
tests/web/: api-client.test.ts  error-formatting.test.ts  error-handling.test.ts  error-logger.test.ts  (+15 more)
(+199 files in other folders)
