[project]
name = "writeo-workspace"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "services/modal-corpus",
    "services/modal-deberta",
    "services/modal-essay",
    "services/modal-feedback",
    "services/modal-gec",
    "services/modal-lt",
    "packages/shared/py"
]
