[project]
name = "modal-corpus"
version = "1.0.0"
description = "Modal service for corpus-trained CEFR scoring"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "transformers>=4.40.0",
    "torch==2.2.0",
    "numpy>=1.24.0,<2.0",
    "pydantic>=2.5.0",
    "safetensors>=0.4.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
