[project]
name = "writeo-modal-essay"
version = "0.1.0"
description = "Modal service for essay scoring"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.64.0",
    "fastapi>=0.104.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "pydantic>=2.5.0",
    "uvicorn>=0.24.0",
    "sentencepiece>=0.1.99",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

