[project]
name = "modal-gector"
version = "0.1.0"
description = "Modal service for GECToR"
requires-python = ">=3.11"
dependencies = [
    "torch==2.2.0",
    "transformers>=4.40.0",
    "fastapi>=0.104.1",
    "pydantic>=2.5.0",
    "gector @ git+https://github.com/gotutiyan/gector.git",
]

[project.optional-dependencies]
dev = ["ruff>=0.1.0", "mypy>=1.0"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["E501", "ARG001", "ARG002", "N812", "N999"]
