[project]
name = "writeo-modal-lt"
version = "0.2.1"
description = "Modal service for LanguageTool grammar checking"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.64.0",
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

